--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -8,6 +8,10 @@
         android:id="@+id/rv_category"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingTop="60dp"
+        android:paddingBottom="60dp"
+        android:paddingLeft="120dp"
+        android:paddingRight="120dp"
         android:clipChildren="false"
         android:clipToPadding="false"
         android:descendantFocusability="afterDescendants"
