--- a/app/src/main/res/layout/fragment_film_detail.xml
+++ b/app/src/main/res/layout/fragment_film_detail.xml
@@ -3,7 +3,8 @@
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:background="@color/gray"
-              android:orientation="vertical">
+              android:orientation="vertical"
+              android:padding="20dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -15,39 +16,65 @@
             android:layout_width="250dp"
             android:layout_height="300dp"
             android:layout_marginLeft="50dp"
-            android:background="@drawable/ic_launcher"/>
+            />
 
-        <TextView
-            android:id="@+id/tv_filmname_detail"
-            style="@style/TextAppearance.Button"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="35dp"
-            android:layout_marginTop="30dp"
             android:layout_toRightOf="@id/iv_filmpic_detail"
-            android:text="电影名"
-            android:textColor="@color/white"
-            android:textSize="34sp"/>
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_filmtype_detail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/tv_filmname_detail"
-            android:layout_below="@id/tv_filmname_detail"
-            android:text="电影类型"/>
-        <TextView
-            android:id="@+id/tv_director_detail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:id="@+id/tv_actors_detail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:id="@+id/tv_desc_detail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/tv_filmname_detail"
+                style="@style/TextAppearance.Button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="35dp"
+                android:layout_marginTop="30dp"
+                android:layout_toRightOf="@id/iv_filmpic_detail"
+                android:text="电影名"
+                android:textColor="@color/white"
+                android:textSize="34sp"/>
+
+
+            <TextView
+                android:id="@+id/tv_filmtype_detail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@id/tv_filmname_detail"
+                android:layout_below="@id/tv_filmname_detail"
+                android:text="电影类型"/>
+
+            <TextView
+                android:id="@+id/tv_director_detail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_filmtype_detail"/>
+
+            <TextView
+                android:id="@+id/tv_actors_detail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <!--<ScrollView-->
+                <!--android:layout_width="890dp"-->
+                <!--android:layout_height="180dp">-->
+
+                <TextView
+                    android:id="@+id/tv_desc_detail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="40dp"
+                    android:textColor="@color/azure"/>
+            <!--</ScrollView>-->
+            <ImageButton
+                android:id="@+id/btn_play"
+                android:focusable="true"
+                android:background="@drawable/ic_play_circle_filled_red_a700_48dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"/>
+        </LinearLayout>
+
 
     </RelativeLayout>
 
