--- a/app/src/main/res/layout/item_category_long.xml
+++ b/app/src/main/res/layout/item_category_long.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
-             android:layout_width="@dimen/item_category_long_width"
-             android:layout_height="@dimen/item_category_small_width"
+             android:layout_width="500dp"
+             android:layout_height="250dp"
              android:layout_margin="5dp"
              style="@style/focusitem">
 
