--- a/app/src/main/res/layout/item_category_small.xml
+++ b/app/src/main/res/layout/item_category_small.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:layout_width="@dimen/item_category_small_width"
-              android:layout_height="@dimen/item_category_small_width"
-             android:layout_margin="5dp"
-              style="@style/focusitem">
+             xmlns:app="http://schemas.android.com/apk/res-auto"
+             style="@style/focusitem"
+             android:layout_width="250dp"
+             android:layout_height="250dp"
+             android:layout_margin="5dp">
 
     <ImageView
         android:id="@+id/mIVCategory"
@@ -14,6 +14,6 @@
 
     <TextView
         android:id="@+id/mTVCategory"
-        android:text="jssd"
-        style="@style/categoryitem"/>
+        style="@style/categoryitem"
+        android:text="jssd"/>
 </FrameLayout>
