--- a/app/src/main/res/layout/fragment_recomm.xml
+++ b/app/src/main/res/layout/fragment_recomm.xml
@@ -2,6 +2,7 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:focusable="false"
               android:gravity="center"
               android:orientation="vertical"
               tools:context="com.tuojin.tvfilm.modules.main.hotrecomm.RecommFragment">
@@ -10,14 +11,15 @@
         android:id="@+id/rv_recomm"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_marginTop="20dp"
         android:layout_marginLeft="120dp"
         android:layout_marginRight="120dp"
-        android:paddingBottom="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_weight="1"
         android:clipChildren="false"
         android:clipToPadding="false"
         android:descendantFocusability="afterDescendants"
+        android:focusable="false"
+        android:paddingBottom="20dp"
         android:scrollbars="none"/>
 
 </LinearLayout>
