--- a/app/src/main/res/layout/item_other.xml
+++ b/app/src/main/res/layout/item_other.xml
@@ -1,37 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rl_container"
     android:layout_width="140dp"
     android:layout_height="wrap_content"
-    android:id="@+id/rl_container"
-    android:focusable="true"
-    android:clipToPadding="false"
-    android:layout_marginLeft="25dp"
     android:layout_marginBottom="30dp"
+    android:layout_marginLeft="25dp"
+    android:clipToPadding="false"
+    android:focusable="true"
     >
+
     <ImageView
         android:id="@+id/movie_image_other"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginLeft="1dp"
-        android:scaleType="centerCrop"
-        android:clipToPadding="false"
-        android:adjustViewBounds="true"
-        android:src="@drawable/ic_launcher"
         android:layout_centerHorizontal="true"
+        android:layout_marginLeft="1dp"
+        android:layout_marginTop="16dp"
+        android:adjustViewBounds="true"
+        android:clipToPadding="false"
+        android:scaleType="centerInside"
+        android:src="@drawable/ic_launcher"
         />
 
     <TextView
         android:id="@+id/movie_title_other"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
         android:layout_below="@id/movie_image_other"
-        android:text="123"
-        android:textSize="20dp"
         android:layout_centerHorizontal="true"
-        android:ellipsize="end"
         android:layout_marginTop="10dp"
+        android:ellipsize="end"
+        android:text="123"
+        android:textColor="@color/white"
+        android:textSize="20dp"
         />
 </RelativeLayout>
