--- a/app/src/main/res/layout/layout_main_tab_area.xml
+++ b/app/src/main/res/layout/layout_main_tab_area.xml
@@ -12,11 +12,13 @@
         android:layout_marginTop="30dp"
         android:orientation="vertical">
 
-        <RadioButton
-            android:id="@+id/tab_indicator_search"
-            style="@style/Widget.TabIndicator_three"
-            android:drawableLeft="@drawable/dcms_search"
-            android:text="返回"/>
+        <ImageButton
+            android:id="@+id/iv_back"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginStart="64dp"
+            android:background="@drawable/iv_back_selector"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -25,7 +27,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_menu"
             android:layout_width="match_parent"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:layout_height="0dp"
             android:layout_weight="1"></android.support.v7.widget.RecyclerView>
 
