--- a/app/src/main/res/layout/layout_main_tab_filmtype.xml
+++ b/app/src/main/res/layout/layout_main_tab_filmtype.xml
@@ -8,6 +8,7 @@
     <RadioGroup
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <LinearLayout
             android:id="@+id/tab_container"
             android:layout_width="match_parent"
@@ -15,10 +16,13 @@
             android:layout_marginTop="30dp"
             android:orientation="vertical">
 
-            <RadioButton
-                android:id="@+id/tab_indicator_search"
-                style="@style/Widget.TabIndicator"
-                android:text="返回"/>
+            <ImageButton
+                android:id="@+id/iv_back"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginStart="64dp"
+                android:background="@drawable/iv_back_selector"/>
 
             <RadioButton
                 android:id="@+id/tab_indicator_action"
