--- a/app/src/main/res/layout/fragment_film_detail.xml
+++ b/app/src/main/res/layout/fragment_film_detail.xml
@@ -65,24 +65,23 @@
                 android:id="@+id/tv_filmtype_detail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/palegreen"
                 android:layout_alignLeft="@id/tv_filmname_detail"
                 android:layout_below="@id/tv_filmname_detail"
                 android:text="电影类型"/>
 
             <TextView
                 android:id="@+id/tv_director_detail"
+                android:textColor="@color/palegreen"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_filmtype_detail"/>
 
             <TextView
                 android:id="@+id/tv_actors_detail"
+                android:textColor="@color/palegreen"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
-
-            <!--<ScrollView-->
-            <!--android:layout_width="890dp"-->
-            <!--android:layout_height="180dp">-->
 
             <TextView
                 android:id="@+id/tv_desc_detail"
