--- a/app/src/main/res/layout/layout_main_tab_area.xml
+++ b/app/src/main/res/layout/layout_main_tab_area.xml
@@ -16,6 +16,7 @@
             android:id="@+id/iv_back"
             android:layout_width="36dp"
             android:layout_height="36dp"
+            android:nextFocusDown="@+id/rv_menu"
             android:layout_marginLeft="30dp"
             android:layout_marginStart="64dp"
             android:background="@drawable/iv_back_selector"/>
