--- a/app/src/main/res/drawable/radio_selectot.xml
+++ b/app/src/main/res/drawable/radio_selectot.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/btn_bg"
-          android:state_pressed="true"/> <!-- pressed -->
+    <!--<item android:drawable="@drawable/btn_bg"-->
+          <!--android:state_pressed="true"/> &lt;!&ndash; pressed &ndash;&gt;-->
     <item android:drawable="@drawable/btn_bg"
           android:state_focused="true"/> <!-- focused -->
-    <item android:state_selected="true"
-          android:state_focused="true"
-          android:drawable="@drawable/btn_bg"/>
-    <item android:state_selected="true"
-          android:state_focused="false"
-          android:drawable="@color/paleturquoise"/>
+    <!--<item android:state_selected="true"-->
+          <!--android:state_focused="true"-->
+          <!--android:drawable="@drawable/btn_bg"/>-->
+    <!--<item android:state_selected="true"-->
+          <!--android:state_focused="false"-->
+          <!--android:drawable="@color/paleturquoise"/>-->
 
 </selector>
