--- a/app/src/main/res/layout/activity_area.xml
+++ b/app/src/main/res/layout/activity_area.xml
@@ -1,32 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:background="@mipmap/bg"
+                android:background="@color/black"
                 android:layout_height="match_parent">
 
+    <include
+        android:id="@+id/topbar"
+        layout="@layout/topbar"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/topbar"
         android:layout_toRightOf="@+id/tab_container"
         android:orientation="vertical">
+
         <TextView
             android:id="@+id/index_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="35dp"
             android:textColor="@color/white"
             android:focusable="false"
+            android:layout_marginLeft="16dp"
             android:textSize="25dp"
             android:text="年份："
             />
 
-        <FrameLayout
+        <android.support.v7.widget.RecyclerView
             android:id="@+id/main_fragment"
             android:layout_width="match_parent"
-            android:layout_height="530dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:layout_marginLeft="1dp"
             android:layout_marginRight="35dp"
             android:nextFocusUp="@+id/iv_back"
+            android:nextFocusLeft="@+id/rv_menu"
             android:layout_toRightOf="@+id/include1"
             android:descendantFocusability="afterDescendants"
             />
@@ -37,37 +44,22 @@
         android:id="@+id/tab_container"
         android:layout_width="182dp"
         android:focusable="false"
+        android:layout_below="@id/topbar"
         android:layout_height="match_parent"
         android:background="@drawable/bg_left"
         android:orientation="vertical">
 
-        <ImageButton
-            android:id="@+id/iv_back"
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:nextFocusDown="@+id/rv_menu"
-            android:layout_marginLeft="30dp"
-            android:layout_marginStart="64dp"
-            android:background="@drawable/iv_back_selector"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_marginTop="10dp"
-            android:layout_height="1dp"/>
         <View
             android:layout_width="match_parent"
             android:layout_height="3dp"
             android:background="@color/wheat"/>
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_menu"
+        <ListView
+            android:id="@+id/lv_menu"
             android:layout_width="match_parent"
             android:layout_marginTop="20dp"
             android:layout_height="0dp"
-            android:layout_weight="1"></android.support.v7.widget.RecyclerView>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:background="@color/wheat"/>
+            android:layout_weight="1"></ListView>
+
     </LinearLayout>
 
 </RelativeLayout>
