--- a/app/src/main/res/layout/activity_year.xml
+++ b/app/src/main/res/layout/activity_year.xml
@@ -1,7 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:background="@color/black"
+                android:layout_height="match_parent">
 
-</LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_toRightOf="@+id/tab_container"
+        android:orientation="vertical">
+        <include
+            android:id="@+id/topbar"
+            layout="@layout/topbar"/>
+        <TextView
+            android:id="@+id/index_type"
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:focusable="false"
+            android:layout_marginLeft="16dp"
+            android:textSize="25dp"
+            android:text="年份："
+            />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/main_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_marginLeft="1dp"
+            android:layout_marginRight="35dp"
+            android:nextFocusUp="@+id/iv_back"
+            android:nextFocusLeft="@+id/rv_menu"
+            android:layout_toRightOf="@+id/include1"
+            android:descendantFocusability="afterDescendants"
+            />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/tab_container"
+        android:layout_width="182dp"
+        android:focusable="false"
+        android:layout_height="match_parent"
+        android:background="@drawable/bg_left"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_menutitle"
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:text="年份选择"
+            android:textSize="32dp"
+            android:focusable="false"
+            android:textColor="@color/white"
+            style="@style/Widget.TabIndicator"
+            android:layout_marginTop="10dp"
+            android:layout_height="wrap_content"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:background="@color/wheat"/>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_menu"
+            android:layout_width="match_parent"
+            android:layout_marginTop="20dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"></android.support.v7.widget.RecyclerView>
+
+    </LinearLayout>
+
+</RelativeLayout>
+
