--- a/app/src/main/res/layout/fragment_film_detail.xml
+++ b/app/src/main/res/layout/fragment_film_detail.xml
@@ -5,6 +5,8 @@
               android:background="@mipmap/bg"
               android:orientation="vertical"
               android:padding="20dp">
+<include layout="@layout/topbar"
+         android:id="@+id/topbar"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -13,6 +15,7 @@
 
         <ImageView
             android:id="@+id/iv_filmpic_detail"
+            android:layout_marginTop="30dp"
             android:layout_width="250dp"
             android:layout_height="300dp"
             android:layout_marginLeft="50dp"
