--- a/app/src/main/res/layout/activity_live.xml
+++ b/app/src/main/res/layout/activity_live.xml
@@ -1,54 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:background="@color/black"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@color/black">
 
-    <include
-        android:id="@+id/topbar"
-        layout="@layout/topbar"/>
+
     <LinearLayout
+        android:id="@+id/video_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/topbar"
         android:layout_toRightOf="@+id/tab_container"
+        android:gravity="center_horizontal"
         android:orientation="vertical">
 
         <fm.jiecao.jcvideoplayer_lib.JCVideoPlayerStandard
             android:id="@+id/jc_video"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_height="600dp"
             />
+
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <Button
-                android:id="@+id/btn_start"
-                android:focusable="true"
-                android:background="@drawable/btn_selector"
-                android:text="开始"
-                android:textColor="@color/white"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal">
+
+
             <Button
                 android:id="@+id/btn_stop"
-                android:focusable="true"
-                android:background="@drawable/btn_selector"
-                android:text="停止"
-                android:textColor="@color/white"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-            <!--<Button-->
-                <!--android:id="@+id/btn_full"-->
-                <!--android:visibility="gone"-->
-                <!--android:focusable="true"-->
-                <!--android:background="@drawable/btn_selector"-->
-                <!--android:text="全屏"-->
-                <!--android:textColor="@color/white"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"/>-->
+                android:layout_height="wrap_content"
+                android:background="@drawable/btn_selector"
+                android:focusable="true"
+                android:text="停止"
+                android:textColor="@color/white"/>
 
+            <Button
+                android:id="@+id/btn_start"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/btn_selector"
+                android:focusable="true"
+                android:text="开始"
+                android:textColor="@color/white"/>
         </LinearLayout>
 
         <TextView
@@ -61,34 +56,44 @@
     <LinearLayout
         android:id="@+id/tab_container"
         android:layout_width="182dp"
-        android:focusable="false"
         android:layout_height="match_parent"
         android:background="@drawable/bg_left"
+        android:focusable="false"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/tv_menutitle"
+            style="@style/Widget.TabIndicator"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:focusable="false"
             android:gravity="center"
             android:text="年份选择"
-            android:textSize="32dp"
-            android:focusable="false"
             android:textColor="@color/white"
-            style="@style/Widget.TabIndicator"
-            android:layout_marginTop="10dp"
-            android:layout_height="wrap_content"/>
+            android:textSize="32dp"/>
+
         <View
             android:layout_width="match_parent"
             android:layout_height="3dp"
             android:background="@color/wheat"/>
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_menu"
             android:layout_width="match_parent"
-            android:layout_marginTop="20dp"
             android:layout_height="0dp"
-            android:layout_weight="1"></android.support.v7.widget.RecyclerView>
+            android:layout_marginTop="20dp"
+            android:layout_weight="1"
+            android:descendantFocusability="afterDescendants"></android.support.v7.widget.RecyclerView>
 
     </LinearLayout>
+
+    <include
+        android:id="@+id/topbar"
+        layout="@layout/topbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/tab_container"/>
 
 </RelativeLayout>
 
