--- a/app/src/main/res/layout/topbar.xml
+++ b/app/src/main/res/layout/topbar.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:orientation="horizontal"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:gravity="center_vertical"
               android:layout_height="wrap_content">
@@ -15,13 +14,12 @@
     <TextView
         android:id="@+id/title"
         android:gravity="center_horizontal"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center"
         android:textSize="32dp"
         android:textColor="@color/wheat"
-        android:text=""
-        android:layout_marginLeft="84dp"
+        android:text="1111"
         android:focusable="false"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-</LinearLayout>
+</FrameLayout>
