--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,6 +55,56 @@
             android:textColor="@color/white"
             android:textSize="24sp"/>
 
+        <TextView
+            android:id="@+id/tv_call"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left|center_vertical"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@id/tv_collect"
+            android:background="@drawable/default_selector_corner"
+            android:focusable="true"
+            android:gravity="center"
+            android:text="呼叫服务"
+            android:textColor="@color/white"
+            android:textSize="24sp"/>
+
+        <TextView
+            android:id="@+id/tv_self"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left|center_vertical"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@id/tv_collect"
+            android:background="@drawable/default_selector_corner"
+            android:focusable="true"
+            android:gravity="center"
+            android:text="自有内容"
+            android:textColor="@color/white"
+            android:textSize="24sp"/>
+
+        <TextView
+            android:id="@+id/tv_status"
+            android:layout_toRightOf="@+id/tv_call"
+            android:textColor="@color/white"
+            android:layout_marginLeft="20dp"
+            android:textSize="24dp"
+            android:visibility="visible"
+            android:layout_alignBaseline="@id/tv_call"
+            android:text=""
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/tv_status_uname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:layout_alignBaseline="@id/tv_collect"
+            android:layout_toRightOf="@+id/tv_status"
+            android:text="lkdalfjdlakjdlsfjlasd"
+            android:textColor="@color/white"
+            android:textSize="24dp"/>
 
         <include
             layout="@layout/item_time"
